--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
         "express": "^4.21.2",
         "express-session": "^1.18.1",
         "jsonwebtoken": "^9.0.2",
-        "mysql2": "^3.12.0"
+        "mysql2": "^3.12.0",
+        "validator": "^13.12.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.9",
